--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
-# These individuals contributed to the hbnb project in this repository 
+# These individuals contributed to the hbnb project in this repository
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Cameron Crupper <3626@holbertonschool.com>
+Hayden Cooper <3629@holbertonschool.com>
